[package]
name = "kafka-tools"
version = "0.1.0"
authors = ["Joe Frikker <joe.frikker@shibumi.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.1"
bufstream = "0.1"
clap = "2.33"
futures = "0.3"

[dependencies.tokio]
version = "0.2"
features = ["tcp", "rt-core", "macros", "io-util", "dns", "sync"]

[dependencies.serde]
version = "1.0"
features = ["derive"]